Add Qt help support with --enable-full-doc
If ‘qhelpgenerator*’ is found, the generation
of API documentation in Qt help format is
enabled with the specified configuration
option.

--- a/configure.ac
+++ b/configure.ac
@@ -889,6 +889,26 @@ if test "$enable_fulldoc" = "yes"; then
         DOXYGEN_DEFINE=""
         DOXYGEN_FILE_PATTERNS="*.h *.hpp *.c *.cpp"
         DOXYGEN_EXCLUDE_PATTERNS=""
+        DOXYGEN_GENERATE_QHP="NO"
+        DOXYGEN_QHG_LOCATION=""
+        DOXYGEN_QHP_NAMESPACE=de.aquamaniac.aqbanking-$AQBANKING_VERSION_STRING
+        enable_qhp="no"
+        if which qhelpgenerator >/dev/null ; then
+            DOXYGEN_QHG_LOCATION=$(which qhelpgenerator)
+            DOXYGEN_GENERATE_QHP="YES"
+            USE_DOT=NO
+            enable_qhp="yes"
+        elif which qhelpgenerator-qt5 >/dev/null ; then
+            DOXYGEN_QHG_LOCATION=$(which qhelpgenerator-qt5)
+            DOXYGEN_GENERATE_QHP="YES"
+            USE_DOT=NO
+            enable_qhp="yes"
+        elif which qhelpgenerator-qt6 >/dev/null ; then
+            DOXYGEN_QHG_LOCATION=$(which qhelpgenerator-qt6)
+            DOXYGEN_GENERATE_QHP="YES"
+            USE_DOT=NO
+            enable_qhp="yes"
+        fi
 else
 	DOXYGEN_DEFINE="DOXYGEN_HIDE"
 	DOXYGEN_INPUT="listdoc.h \
@@ -919,7 +939,13 @@ AC_SUBST(DOXYGEN_INPUT)
 AC_SUBST(DOXYGEN_DEFINE)
 AC_SUBST(DOXYGEN_FILE_PATTERNS)
 AC_SUBST(DOXYGEN_EXCLUDE_PATTERNS)
+AC_SUBST(DOXYGEN_GENERATE_QHP)
+AC_SUBST(DOXYGEN_QHG_LOCATION)
+AC_SUBST(DOXYGEN_QHP_NAMESPACE)
+AC_SUBST(USE_DOT)
 AC_MSG_RESULT($enable_fulldoc)
+AC_MSG_CHECKING(if Qt help file should be created)
+AC_MSG_RESULT($enable_qhp)
 
 
 
